--- a/EDA_01.ipynb
+++ b/EDA_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,37 +20,37 @@
     "df_2 = pd.read_csv('data/archive/16_2-7.csv')\n",
     "df_3 = pd.read_csv('data/archive/16_7-6.csv')\n",
     "df_4 = pd.read_csv('data/archive/17_4-1.csv')\n",
-    "df_5 = pd.read_csv('data/archive/25_5_3_well.csv')\n",
-    "df_6 = pd.read_csv('data/archive/25_10_10_well.csv')\n",
+    "#df_5 = pd.read_csv('data/archive/25_5_3_well.csv')\n",
+    "#df_6 = pd.read_csv('data/archive/25_10_10_well.csv')\n",
     "df_7 = pd.read_csv('data/archive/25_10-9.csv')\n",
-    "df_8 = pd.read_csv('data/archive/25_11_24_well.csv')\n",
+    "#df_8 = pd.read_csv('data/archive/25_11_24_well.csv')\n",
     "df_9 = pd.read_csv('data/archive/31_2-10.csv')\n",
     "df_10 = pd.read_csv('data/archive/31_2-21 S.csv')\n",
     "df_11 = pd.read_csv('data/archive/31_6-5.csv')\n",
     "df_12 = pd.read_csv('data/archive/31_6-8.csv')\n",
-    "df_13 = pd.read_csv('data/archive/34_3_3_A_well.csv')\n",
+    "#df_13 = pd.read_csv('data/archive/34_3_3_A_well.csv')\n",
     "df_14 = pd.read_csv('data/archive/34_3-2 S.csv')\n",
-    "df_15 = pd.read_csv('data/archive/34_6_1_S_well.csv')\n",
-    "df_16 = pd.read_csv('data/archive/34_10_16_R_well.csv')\n",
-    "df_17 = pd.read_csv('data/archive/35_6_2_S_well.csv')\n",
-    "df_18 = pd.read_csv('data/archive/35_9_8_well.csv')\n",
+    "#df_15 = pd.read_csv('data/archive/34_6_1_S_well.csv')\n",
+    "#df_16 = pd.read_csv('data/archive/34_10_16_R_well.csv')\n",
+    "#df_17 = pd.read_csv('data/archive/35_6_2_S_well.csv')\n",
+    "#df_18 = pd.read_csv('data/archive/35_9_8_well.csv')\n",
     "df_19 = pd.read_csv('data/archive/35_9-7.csv')\n",
-    "df_20 = pd.read_csv('data/archive/29_3_1_well.csv')"
+    "#df_20 = pd.read_csv('data/archive/29_3_1_well.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.concat([df_1, df_2, df_3, df_4, df_5, df_6, df_7, df_8, df_9, df_10,  \n",
-    "                df_11, df_12, df_13, df_14, df_15, df_16, df_17, df_18, df_19, df_20])"
+    "df = pd.concat([df_1, df_2, df_3, df_4,df_7, df_9, df_10,  \n",
+    "                df_11, df_12, df_14, df_19,])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -99,122 +99,122 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>24208</th>\n",
-       "      <td>29/3-1</td>\n",
-       "      <td>4388.154001</td>\n",
-       "      <td>442456.68750</td>\n",
-       "      <td>6759326.0</td>\n",
-       "      <td>-4361.688477</td>\n",
-       "      <td>DUNLIN GP.</td>\n",
-       "      <td>Amundsen Fm.</td>\n",
-       "      <td>8.386115</td>\n",
+       "      <th>10672</th>\n",
+       "      <td>35/9-7</td>\n",
+       "      <td>2973.2988</td>\n",
+       "      <td>536096.0625</td>\n",
+       "      <td>6793022.0</td>\n",
+       "      <td>-2943.444580</td>\n",
+       "      <td>BAAT GP.</td>\n",
+       "      <td>Etive Fm.</td>\n",
+       "      <td>8.276272</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4.942477</td>\n",
+       "      <td>2.820439</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.013345</td>\n",
+       "      <td>0.502458</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>2.311106</td>\n",
+       "      <td>24.306124</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>65000.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24209</th>\n",
-       "      <td>29/3-1</td>\n",
-       "      <td>4388.306001</td>\n",
-       "      <td>442456.68750</td>\n",
-       "      <td>6759326.0</td>\n",
-       "      <td>-4361.840332</td>\n",
-       "      <td>DUNLIN GP.</td>\n",
-       "      <td>Amundsen Fm.</td>\n",
-       "      <td>8.354507</td>\n",
+       "      <th>10673</th>\n",
+       "      <td>35/9-7</td>\n",
+       "      <td>2973.4508</td>\n",
+       "      <td>536096.0625</td>\n",
+       "      <td>6793022.0</td>\n",
+       "      <td>-2943.595947</td>\n",
+       "      <td>BAAT GP.</td>\n",
+       "      <td>Etive Fm.</td>\n",
+       "      <td>8.267273</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4.534567</td>\n",
+       "      <td>3.020778</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.013363</td>\n",
+       "      <td>0.374753</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1.853418</td>\n",
+       "      <td>22.201078</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>65000.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24210</th>\n",
-       "      <td>29/3-1</td>\n",
-       "      <td>4388.458001</td>\n",
-       "      <td>442456.68750</td>\n",
-       "      <td>6759326.0</td>\n",
-       "      <td>-4361.992188</td>\n",
-       "      <td>DUNLIN GP.</td>\n",
-       "      <td>Amundsen Fm.</td>\n",
-       "      <td>8.329751</td>\n",
+       "      <th>10674</th>\n",
+       "      <td>35/9-7</td>\n",
+       "      <td>2973.6028</td>\n",
+       "      <td>536096.0625</td>\n",
+       "      <td>6793022.0</td>\n",
+       "      <td>-2943.747559</td>\n",
+       "      <td>BAAT GP.</td>\n",
+       "      <td>Etive Fm.</td>\n",
+       "      <td>8.250099</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4.370479</td>\n",
+       "      <td>2.795711</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.020432</td>\n",
+       "      <td>0.211487</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1.325961</td>\n",
+       "      <td>20.096741</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>65000.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24211</th>\n",
-       "      <td>29/3-1</td>\n",
-       "      <td>4388.610001</td>\n",
-       "      <td>442456.71875</td>\n",
-       "      <td>6759326.0</td>\n",
-       "      <td>-4362.144043</td>\n",
-       "      <td>DUNLIN GP.</td>\n",
-       "      <td>Amundsen Fm.</td>\n",
-       "      <td>8.317094</td>\n",
+       "      <th>10675</th>\n",
+       "      <td>35/9-7</td>\n",
+       "      <td>2973.7548</td>\n",
+       "      <td>536096.0625</td>\n",
+       "      <td>6793022.0</td>\n",
+       "      <td>-2943.899170</td>\n",
+       "      <td>BAAT GP.</td>\n",
+       "      <td>Etive Fm.</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4.577657</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.658694</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.029606</td>\n",
+       "      <td>0.147950</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1.260347</td>\n",
+       "      <td>17.992323</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>65000.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24212</th>\n",
-       "      <td>29/3-1</td>\n",
-       "      <td>4388.762001</td>\n",
-       "      <td>442456.71875</td>\n",
-       "      <td>6759326.0</td>\n",
-       "      <td>-4362.296387</td>\n",
-       "      <td>DUNLIN GP.</td>\n",
-       "      <td>Amundsen Fm.</td>\n",
-       "      <td>8.311039</td>\n",
+       "      <th>10676</th>\n",
+       "      <td>35/9-7</td>\n",
+       "      <td>2973.9068</td>\n",
+       "      <td>536096.0625</td>\n",
+       "      <td>6793022.0</td>\n",
+       "      <td>-2944.050537</td>\n",
+       "      <td>BAAT GP.</td>\n",
+       "      <td>Etive Fm.</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5.239013</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.802693</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.034234</td>\n",
+       "      <td>0.174232</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1.266063</td>\n",
+       "      <td>15.889325</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>65000.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -224,38 +224,38 @@
        "</div>"
       ],
       "text/plain": [
-       "         WELL     DEPTH_MD         X_LOC      Y_LOC        Z_LOC       GROUP  \\\n",
-       "24208  29/3-1  4388.154001  442456.68750  6759326.0 -4361.688477  DUNLIN GP.   \n",
-       "24209  29/3-1  4388.306001  442456.68750  6759326.0 -4361.840332  DUNLIN GP.   \n",
-       "24210  29/3-1  4388.458001  442456.68750  6759326.0 -4361.992188  DUNLIN GP.   \n",
-       "24211  29/3-1  4388.610001  442456.71875  6759326.0 -4362.144043  DUNLIN GP.   \n",
-       "24212  29/3-1  4388.762001  442456.71875  6759326.0 -4362.296387  DUNLIN GP.   \n",
+       "         WELL   DEPTH_MD        X_LOC      Y_LOC        Z_LOC     GROUP  \\\n",
+       "10672  35/9-7  2973.2988  536096.0625  6793022.0 -2943.444580  BAAT GP.   \n",
+       "10673  35/9-7  2973.4508  536096.0625  6793022.0 -2943.595947  BAAT GP.   \n",
+       "10674  35/9-7  2973.6028  536096.0625  6793022.0 -2943.747559  BAAT GP.   \n",
+       "10675  35/9-7  2973.7548  536096.0625  6793022.0 -2943.899170  BAAT GP.   \n",
+       "10676  35/9-7  2973.9068  536096.0625  6793022.0 -2944.050537  BAAT GP.   \n",
        "\n",
-       "          FORMATION      CALI  RSHA      RMED  ...  DCAL      DRHO  MUDWEIGHT  \\\n",
-       "24208  Amundsen Fm.  8.386115   NaN  4.942477  ...   NaN  0.013345        NaN   \n",
-       "24209  Amundsen Fm.  8.354507   NaN  4.534567  ...   NaN  0.013363        NaN   \n",
-       "24210  Amundsen Fm.  8.329751   NaN  4.370479  ...   NaN  0.020432        NaN   \n",
-       "24211  Amundsen Fm.  8.317094   NaN  4.577657  ...   NaN  0.029606        NaN   \n",
-       "24212  Amundsen Fm.  8.311039   NaN  5.239013  ...   NaN  0.034234        NaN   \n",
+       "       FORMATION      CALI  RSHA      RMED  ...  DCAL      DRHO  MUDWEIGHT  \\\n",
+       "10672  Etive Fm.  8.276272   NaN  2.820439  ...   NaN  0.502458        NaN   \n",
+       "10673  Etive Fm.  8.267273   NaN  3.020778  ...   NaN  0.374753        NaN   \n",
+       "10674  Etive Fm.  8.250099   NaN  2.795711  ...   NaN  0.211487        NaN   \n",
+       "10675  Etive Fm.       NaN   NaN  2.658694  ...   NaN  0.147950        NaN   \n",
+       "10676  Etive Fm.       NaN   NaN  2.802693  ...   NaN  0.174232        NaN   \n",
        "\n",
-       "       RMIC  ROPA  RXO  FORCE_2020_LITHOFACIES_LITHOLOGY  \\\n",
-       "24208   NaN   NaN  NaN                               NaN   \n",
-       "24209   NaN   NaN  NaN                               NaN   \n",
-       "24210   NaN   NaN  NaN                               NaN   \n",
-       "24211   NaN   NaN  NaN                               NaN   \n",
-       "24212   NaN   NaN  NaN                               NaN   \n",
+       "           RMIC       ROPA  RXO  FORCE_2020_LITHOFACIES_LITHOLOGY  \\\n",
+       "10672  2.311106  24.306124  NaN                           65000.0   \n",
+       "10673  1.853418  22.201078  NaN                           65000.0   \n",
+       "10674  1.325961  20.096741  NaN                           65000.0   \n",
+       "10675  1.260347  17.992323  NaN                           65000.0   \n",
+       "10676  1.266063  15.889325  NaN                           65000.0   \n",
        "\n",
        "       FORCE_2020_LITHOFACIES_CONFIDENCE  Unnamed: 0  DEPT  \n",
-       "24208                                NaN         NaN   NaN  \n",
-       "24209                                NaN         NaN   NaN  \n",
-       "24210                                NaN         NaN   NaN  \n",
-       "24211                                NaN         NaN   NaN  \n",
-       "24212                                NaN         NaN   NaN  \n",
+       "10672                                2.0         NaN   NaN  \n",
+       "10673                                2.0         NaN   NaN  \n",
+       "10674                                2.0         NaN   NaN  \n",
+       "10675                                2.0         NaN   NaN  \n",
+       "10676                                2.0         NaN   NaN  \n",
        "\n",
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "31"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,16 +311,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(238622, 31)"
+       "(122117, 31)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,14 +382,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Уникальных скважин 18\n"
+      "Уникальных скважин - 9\n"
      ]
     }
    ],
@@ -399,19 +399,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['15/9-23', '16/2-7', '16/7-6', '17/4-1', '25/5-3', '25/10-10',\n",
-       "       '25/10-9', '25/11-24', '31/2-10', '31/2-21 S', nan, '34/3-3 A',\n",
-       "       '34/3-2 S', '34/6-1 S', '34/10-16 R', '35/6-2 S', '35/9-8',\n",
-       "       '35/9-7', '29/3-1'], dtype=object)"
+       "array(['15/9-23', '16/2-7', '16/7-6', '17/4-1', '25/10-9', '31/2-10',\n",
+       "       '31/2-21 S', nan, '34/3-2 S', '35/9-7'], dtype=object)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,17 +440,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([65000., 65030., 70000., 30000., 99000., 70032., 80000., 90000.,\n",
-       "       86000., 74000., 88000.,    nan])"
+       "       86000., 74000., 88000.])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +482,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,43 +493,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['25/5-3', '25/10-10', '25/11-24', nan, '34/3-3 A', '34/6-1 S',\n",
-       "       '34/10-16 R', '35/6-2 S', '35/9-8', '29/3-1'], dtype=object)"
+       "array([   nan, 65000., 30000., 70000., 65030., 99000., 80000., 90000.])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['FORCE_2020_LITHOFACIES_LITHOLOGY'].isna()]['WELL'].unique()"
+    "df[df['WELL'].isna()]['FORCE_2020_LITHOFACIES_LITHOLOGY'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.dropna(subset=['FORCE_2020_LITHOFACIES_LITHOLOGY'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ = pd.read_csv('data/archive/29_3_1_well.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "238622"
+       "Index(['WELL', 'DEPTH_MD', 'X_LOC', 'Y_LOC', 'Z_LOC', 'GROUP', 'FORMATION',\n",
+       "       'CALI', 'RSHA', 'RMED', 'RDEP', 'RHOB', 'GR', 'SGR', 'NPHI', 'PEF',\n",
+       "       'DTC', 'SP', 'BS', 'ROP', 'DTS', 'DCAL', 'DRHO', 'MUDWEIGHT', 'RMIC',\n",
+       "       'ROPA', 'RXO'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['FORCE_2020_LITHOFACIES_LITHOLOGY'].isna().count()"
+    "df_.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FORCE_2020_LITHOFACIES_LITHOLOGY    121424\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['FORCE_2020_LITHOFACIES_LITHOLOGY']].isna().count()"
    ]
   },
   {
