--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -108,6 +108,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# encoder = OneHotEncoder(sparse_output=False)\n",
+    "\n",
+    "# one_hot_encoded = encoder.fit_transform(y)\n",
+    "\n",
+    "# y = pd.DataFrame(one_hot_encoded,\n",
+    "#                           columns=encoder.get_feature_names_out())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -151,15 +165,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prediction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
